# EA2MCATips

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: create-mca-subscription.yml
dashboard/: README.md  app.js  index.html  styles.css
dashboard/data/: README.md  dashboard-data.sample.json  status.offline.json  status.real.sample.json
docs/: api-mapping.md  billing-hierarchy-invoice-flow.md  csa-setup-runbook.md  ea-to-mca-deep-dive.md  invoice-management.md  overview.md  rbac-role-task-matrix.md  readiness-checklist.md  service-principal-automation-101.md  sources.md  subscription-automation.md  testing-strategy.md  uncertainty-register.md  validation-log.md  what-i-need-from-you.md
infra/terraform/: .gitignore  README.md  locals.tf  main.azurerm.tf.example  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: README.md  assign_billing_role.sh  assign_subscription_creator_role.sh  check_billing_access.sh  create_subscription.sh  discover_billing_scopes.sh  serve_dashboard.sh
src/ea2mca/: __init__.py  main.py
tests/: test_main.py
